# Dispatcharr

./: .gitignore  APPLY_ALL_FIXES_v0.26.0.md  APPLY_BUGFIXES_v0.27.1.md  BUFFER_TIMEOUT_FAILOVER_FIX_v0.26.0.md  BUFFER_TIMEOUT_FAILOVER_SUMMARY.md  BUGFIX_CHECKLIST_PROFILE_FAILOVER.md  BUGFIX_PREVIEW_PROFILE_FAILOVER_v0.27.2.md  BUGFIX_PROFILE_FAILOVER_v0.22.1.md  BUGFIX_REPORT_v0.21.1.md  BUGFIX_SUMMARY.md  BUG_ANALYSE_ZUSAMMENFASSUNG.md  BUG_ANALYSIS_v0.27.0.md  BUILD.md  BUILD_AND_TEST_AIO.sh  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_ANALYSIS_REPORT.md  COMPARISON_v25.0_vs_v26.0.md  COMPLETE_FINAL_VERIFICATION_v0.22.1.md  COMPLETE_FIX_v0.26.0_README.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_PROXY_IMPLEMENTATION.md  CONTRIBUTING.md  COOLDOWN_LAST_RESORT_FIX.md  COOLDOWN_QUICK_START.md  COOLDOWN_SYSTEM_IMPLEMENTATION.md  COOLDOWN_SYSTEM_v0.26.0.md  COOLDOWN_UI_IMPLEMENTATION.md  CRITICAL_FIXES_v0.27.1.patch  CRITICAL_FIXES_v0.27.1_README.md  DISPATCHARR_v0.21.1_ENHANCED_README.md  DOCKER_BUILD_FIX_SUMMARY.md  DOCKER_BUILD_FIX_v0.26.0_README.md  ENHANCED_FEATURES_v0.25.0.md  EXECUTIVE_SUMMARY.md  Eventing.md  FAILOVER_BEHAVIOR_COMPARISON.md  FAILOVER_SYSTEM_EXPLAINED.md  FEATURE_COMPARISON_v0.26.0_vs_v0.27.0.md  (+88 more)
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.vscode_templates/: .env.development  README.md  launch.json  ssh_config.example  tasks.json
Example Plugins/: README.md
Plugin Docs/: ADVANCED_PLUGIN_DEVELOPMENT.md  BASIC_PLUGIN_DEVELOPMENT.md  README.md  USER_GUIDE.md
core/: admin.py  api_urls.py  api_views.py  apps.py  developer_notifications.py  events.py  models.py  progress.py  redis_pubsub.py  scheduling.py  serializers.py  signal_helpers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py  xtream_codes.py
dispatcharr/: __init__.py  celery.py  consumers.py  context.py  display_timezone.py  gevent_patch.py  middleware.py  persistent_lock.py  settings.py  settings_test.py  test_discovery.py  test_runner.py  urls.py  utils.py  wsgi.py
docker/: DispatcharrBase  Dockerfile  Dockerfile.ssh  debug_packages.sh  dfs.py  docker-compose.aio.local.yml  docker-compose.aio.yml  docker-compose.debug.yml  docker-compose.dev.vscode.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint-ssh.sh  entrypoint.aio.sh  entrypoint.celery.sh  entrypoint.sh  media-fs.py  nginx.conf  setup-ssh.sh  streamfs.py  uwsgi.debug.ini  uwsgi.dev.ini  uwsgi.ini  uwsgi.modular.ini  virtfs.py
docs/: EPG_PROGRAM_SEARCH_API.md  (+2 more)
(+905 files in other folders)
